<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="#F9ECF8"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zavgorodniy.moodmaker.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/HeaderText"
        android:text="@string/tv_initial_text_first"
        android:id="@+id/textView"
        android:layout_marginTop="38dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/HeaderText"
        android:text="@string/tv_initial_text_second"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="30sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_start"
        android:id="@+id/bt_start"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="startCriteria"/>
</RelativeLayout>
